--- a/index.css
+++ b/index.css
@@ -1,3 +1,54 @@
-#heading {
-  color: red;
+.header {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  border: 1px solid rgb(220, 218, 218);
+  padding: 0px 20px;
+}
+
+.logo {
+  width: 100%;
+  height: 100px;
+}
+
+.nav-items > ul {
+  display: flex;
+  font-size: 24px;
+  list-style-type: none;
+}
+
+.nav-items > ul > li {
+  margin: 10px;
+}
+
+.res-body {
+  padding-top: 10px;
+}
+
+.res-container {
+  display: flex;
+}
+
+.res-search {
+  padding: 10px;
+}
+
+.res-card {
+  width: 300px;
+  height: 330px;
+  background-color: rgb(220, 218, 218);
+  padding: 5px;
+  border-radius: 5px;
+  margin: 5px;
+}
+
+.res-card:hover {
+  border: 1px solid black;
+  border-radius: 10px;
+}
+
+.res-card > img {
+  width: 100%;
+  height: 50%;
+  border-radius: 10px;
 }
