--- a/index.css
+++ b/index.css
@@ -27,6 +27,8 @@
 
 .res-container {
   display: flex;
+  flex-wrap: wrap;
+  padding: 10px;
 }
 
 .res-search {
@@ -35,11 +37,11 @@
 
 .res-card {
   width: 300px;
-  height: 330px;
+  /* height: 400px; */
   background-color: rgb(220, 218, 218);
   padding: 5px;
   border-radius: 5px;
-  margin: 5px;
+  margin: 10px;
 }
 
 .res-card:hover {
