--- a/index.css
+++ b/index.css
@@ -59,3 +59,17 @@
   margin: 10px;
   cursor: pointer;
 }
+
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.shimmer-card {
+  width: 310px;
+  height: 620px;
+  background-color: #dcdada;
+  padding: 5px;
+  border-radius: 5px;
+  margin: 10px;
+}
